--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -8,7 +8,7 @@ h1,h2{
 }
 
 p{
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Dekko', cursive;
     font-size:2em;
 }
 
@@ -60,8 +60,7 @@ p{
 .dl-horizontal > dd{
     font-size:1.4em;
     font-weight: bold;
-    font-family:'Amatic SC', cursive;
-
+    font-family: 'Dekko', cursive;
 }
 
 .dl-horizontal >dt{
