--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -83,3 +83,8 @@ p{
 .mylink dd{
     font-size:1.5em;
 }
+.achievements > li{
+    font-size:2em;
+    font-family:'Dekko', cursive;
+    list-style-type: none;
+}
