List style type: square

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -86,5 +86,5 @@ p{
 .achievements > li{
     font-size:2em;
     font-family:'Dekko', cursive;
-    list-style-type: none;
+    list-style-type: square;
 }
