--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #4a5269;
+    background-color: rgb(52, 46, 42);
     color: #fdeaaf;
 }
 
@@ -27,8 +27,8 @@ p{
 }
 
 .navbar-default{
-    background-color: #4a5269;
-    border-color: #4a5269;
+    background-color: rgb(52, 46, 42);
+    border-color: rgb(52, 46, 42);
 }
 
 .navbar-default .navbar-brand{
@@ -39,7 +39,7 @@ p{
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus{
     color: #fdeaaf;
-    background-color: #373d50;
+    background-color: rgb(88, 76, 67);
     cursor: pointer;
 }
 .navbar-default .navbar-nav > li > a{
@@ -51,14 +51,14 @@ p{
 .navbar-default .navbar-nav > .active > a,.navbar-default .navbar-nav > .active > a:hover,.navbar-default .navbar-nav > .active > a:focus{
     color: #fdeaaf;
     font-size:1.5em;
-    background-color: #373d50;
+    background-color: rgb(88, 76, 67);
     cursor: pointer;
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{
     color: #fdeaaf;
     font-size:1.5em;
-    background-color: #373d50;
+    background-color: rgb(88, 76, 67);
     cursor: pointer;
 }
 .dl-horizontal > dd{
