--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -21,9 +21,14 @@ p{
     font-family: cursive;
 }
 
+.footer{
+    font-family: 'Special Elite';
+    font-size: 1.25em;
+    padding-top: 0.5em;
+}
 .footer img{
-    height: 1.5em;
-    width:1.5em;
+    height: 1em;
+    width: 1em;
 }
 
 .navbar-default{
