--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -8,7 +8,7 @@ h1,h2{
 }
 
 p{
-    font-family: 'Cuprum', sans-serif;
+    font-family: 'Inconsolata', sans-serif;
     font-size:2em;
 }
 
@@ -69,7 +69,7 @@ p{
 .dl-horizontal > dd{
     font-size:1.4em;
     font-weight: bold;
-    font-family: 'Cuprum', sans-serif;
+    font-family: 'Inconsolata', sans-serif;
 }
 
 .dl-horizontal >dt{
@@ -90,6 +90,6 @@ p{
 }
 .achievements > li{
     font-size:2em;
-    font-family:'Cuprum', sans-serif;
+    font-family:'Inconsolata', sans-serif;
     list-style-type: square;
 }
